cmake_minimum_required(VERSION 2.8)
project(EigenSample)
#set(THIRD_PARTY_LIB /home/wasku/Code/cppCode/thirdPartyLibrary)
set(THIRD_PARTY_LIB ~/Code/cppCode/thirdPartyLibrary)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/out)
set(CMAKE_CXX_STANDARD 11)


#add_subdirectory(src/test)
add_subdirectory(src/test11)
#add_subdirectory(src/test12)
